--- a/docs/3.0/develop/manage-states.mdx
+++ b/docs/3.0/develop/manage-states.mdx
@@ -3,8 +3,8 @@ title: Manage states
 description: Prefect states contain information about the status of a flow or task run.
 ---
 
-States are rich objects that contain information about the status of a particular [task](/3.0rc/develop/write-tasks) 
-run or [flow](/3.0rc/develop/write-flows/) run.
+States are rich objects that contain information about the status of a particular [task](/3.0/develop/write-tasks) 
+run or [flow](/3.0/develop/write-flows/) run.
 
 You can learn many things about a task or flow by examining its current state or the 
 history of its states. For example, a state could tell you that a task:
