--- a/docs/3.0/develop/task-runners.mdx
+++ b/docs/3.0/develop/task-runners.mdx
@@ -290,7 +290,7 @@ assert resulting_sum == [10, 11, 12]
 ## Use multiple task runners
 
 Each flow can only have one task runner, but sometimes you may want a subset of your tasks to run using a different task runner than the one configured on the flow. 
-In this case, you can create [nested flows](/3.0rc/develop/write-flows/#composing-flows) for tasks that need to use a different task runner.
+In this case, you can create [nested flows](/3.0/develop/write-flows/#composing-flows) for tasks that need to use a different task runner.
 
 For example, you can have a flow (in the example below called `multiple_runner_flow`) that runs its tasks locally using the `ThreadPoolTaskRunner`. 
 If you have some tasks that can run more efficiently in parallel on a Dask cluster, you can create a nested flow (such as `dask_nested_flow`) to run those tasks using the `DaskTaskRunner`.
