--- a/docs/3.0/develop/transactions.mdx
+++ b/docs/3.0/develop/transactions.mdx
@@ -13,7 +13,7 @@ These records can be shared across tasks and flows.
 
 Under the hood, every Prefect task run is governed by a transaction.
 In the default mode of task execution, all you need to understand about transactions are [the policies
-determining the task's cache key computation](/3.0rc/develop/task-caching). 
+determining the task's cache key computation](/3.0/develop/task-caching). 
 
 <Tip> 
 **Transactions and states**
