--- a/docs/3.0/get-started/index.mdx
+++ b/docs/3.0/get-started/index.mdx
@@ -25,13 +25,13 @@ if __name__ == "__main__":
 ## Get started
 
 <CardGroup cols={3}>
-  <Card title="Quickstart" icon="play" href="/3.0rc/get-started/quickstart">
+  <Card title="Quickstart" icon="play" href="/3.0/get-started/quickstart">
     Learn how to schedule a script to run on remote infrastructure and observe its state.
   </Card>
-  <Card title="Prefect Cloud" icon="cloud" href="/3.0rc/manage/cloud/index">
+  <Card title="Prefect Cloud" icon="cloud" href="/3.0/manage/cloud/index">
     Supercharge Prefect with enhanced governance, security, and performance capabilities.
   </Card>
-  <Card title="Upgrade to Prefect 3" icon="sparkles" href="/3.0rc/resources/upgrade-to-prefect-3">
+  <Card title="Upgrade to Prefect 3" icon="sparkles" href="/3.0/resources/upgrade-to-prefect-3">
     Upgrade from Prefect 2 to Prefect 3 to get the latest features and performance enhancements.
   </Card>
 </CardGroup>
@@ -39,13 +39,13 @@ if __name__ == "__main__":
 ## Start building
 
 <CardGroup cols={3}>
-  <Card title="Develop" icon="code" href="/3.0rc/develop/write-flows">
+  <Card title="Develop" icon="code" href="/3.0/develop/write-flows">
     Write, run, configure, and observe workflows and their tasks, results, artifacts, and more.
   </Card>
-  <Card title="Deploy" icon="rocket" href="/3.0rc/deploy/index">
+  <Card title="Deploy" icon="rocket" href="/3.0/deploy/index">
     Run workflows in local processes or deploy them to dynamically provisioned infrastructure.
   </Card>
-  <Card title="Automate" icon="robot" href="/3.0rc/automate/events/automations-triggers">
+  <Card title="Automate" icon="robot" href="/3.0/automate/events/automations-triggers">
     Enable workflows to react to their environment with events, automations, and webhooks.
   </Card>
 </CardGroup>
