--- a/docs/3.0/get-started/install.mdx
+++ b/docs/3.0/get-started/install.mdx
@@ -59,10 +59,10 @@ pip install -U prefect-client
 
 You also need an API server, either:
 
-* [Prefect Cloud](/3.0rc/manage/cloud/), a managed solution that provides strong scaling, performance, and security, or
-* [Self-hosted Prefect server](/3.0rc/manage/self-host/), an API server that you run on your own infrastructure where you are responsible for scaling and any authentication and authorization.
+* [Prefect Cloud](/3.0/manage/cloud/), a managed solution that provides strong scaling, performance, and security, or
+* [Self-hosted Prefect server](/3.0/manage/self-host/), an API server that you run on your own infrastructure where you are responsible for scaling and any authentication and authorization.
 
-Now that you have Prefect installed, go through the [quickstart](/3.0rc/get-started/quickstart/) to try it out.
+Now that you have Prefect installed, go through the [quickstart](/3.0/get-started/quickstart/) to try it out.
 
 Learn more about release versions in the [Prefect release notes](https://github.com/PrefectHQ/prefect/releases).
 
