--- a/docs/3.0/manage/index.mdx
+++ b/docs/3.0/manage/index.mdx
@@ -5,9 +5,9 @@ description: Learn how to interact with Prefect Cloud or self-host a Prefect ser
 ---
 
 The **Use Prefect Cloud** section covers how to interact with Prefect Cloud.
-See the [Prefect Cloud overview](/3.0rc/manage/cloud/) for a discussion of the pages in this section.
+See the [Prefect Cloud overview](/3.0/manage/cloud/) for a discussion of the pages in this section.
 
 
-- [Host Prefect server](/3.0rc/manage/self-host/) explains how to self-host Prefect server.
-- [Configure settings and profiles](/3.0rc/manage/self-host/) shows how to configure API interactions through environment variables or Prefect profiles.
-- [Manage run metadata in Python](/3.0rc/manage/self-host/) demonstrates how to interact with the API in Python through the `PrefectClient`.
+- [Host Prefect server](/3.0/manage/self-host/) explains how to self-host Prefect server.
+- [Configure settings and profiles](/3.0/manage/self-host/) shows how to configure API interactions through environment variables or Prefect profiles.
+- [Manage run metadata in Python](/3.0/manage/self-host/) demonstrates how to interact with the API in Python through the `PrefectClient`.
