--- a/docs/integrations/prefect-databricks/index.mdx
+++ b/docs/integrations/prefect-databricks/index.mdx
@@ -8,7 +8,7 @@ Prefect integrations for interacting with Databricks.
 
 ### Prerequisites
 
-- [Prefect installed](/3.0rc/get-started/install) in a virtual environment.
+- [Prefect installed](/3.0/get-started/install) in a virtual environment.
 - A [Databricks account](https://databricks.com/) and the necessary permissions to access desired services.
 
 ### Install `prefect-databricks`
