--- a/docs/integrations/prefect-dbt/index.mdx
+++ b/docs/integrations/prefect-dbt/index.mdx
@@ -9,7 +9,7 @@ Prefect provides a global view of the state of your workflows and allows you to 
 
 ### Prerequisites
 
-- [Prefect installed](3.0rc/get-started/install).
+- [Prefect installed](3.0/get-started/install).
 - A [dbt Cloud account](https://cloud.getdbt.com/signup) if using dbt Cloud.
 
 ### Install prefect-dbt
@@ -78,7 +78,7 @@ run_dbt_job_flow()
 
 ### Save dbt Cloud credentials to a block
 
-Blocks can be [created through code](/3.0rc/develop/blocks/#saving-blocks) or through the UI.
+Blocks can be [created through code](/3.0/develop/blocks/#saving-blocks) or through the UI.
 
 
 To create a dbt Cloud Credentials block:
