--- a/docs/integrations/prefect-docker/index.mdx
+++ b/docs/integrations/prefect-docker/index.mdx
@@ -9,7 +9,7 @@ The prefect-docker library is required to create deployments that will submit ru
 
 ### Prerequisites
 
-- [Prefect installed](3.0rc/get-started/install) in a virtual environment.
+- [Prefect installed](3.0/get-started/install) in a virtual environment.
 - [Docker installed](https://www.docker.com/) and running.
 
 ### Install prefect-docker
@@ -31,7 +31,7 @@ Install or update to the latest version of the prefect-docker library and depend
 </Tabs>
 
 ### Examples
-See the Prefect [Workers docs](/3.0rc/deploy/infrastructure-examples/docker) to learn how to create and run deployments that use Docker.
+See the Prefect [Workers docs](/3.0/deploy/infrastructure-examples/docker) to learn how to create and run deployments that use Docker.
 
 ## Resources
 
