--- a/docs/integrations/prefect-github/index.mdx
+++ b/docs/integrations/prefect-github/index.mdx
@@ -8,7 +8,7 @@ Prefect-github makes it easy to interact with GitHub repositories and use GitHub
 
 ### Prerequisites
 
-- [Prefect installed](/3.0rc/get-started/install/).
+- [Prefect installed](/3.0/get-started/install/).
 - A [GitHub account](https://github.com/).
 
 ### Install prefect-github
