--- a/docs/integrations/prefect-gitlab/index.mdx
+++ b/docs/integrations/prefect-gitlab/index.mdx
@@ -8,7 +8,7 @@ The prefect-gitlab library makes it easy to interact with GitLab repositories an
 
 ### Prerequisites
 
-- [Prefect installed](/3.0rc/get-started/install/).
+- [Prefect installed](/3.0/get-started/install/).
 - A [GitLab account](https://gitlab.com/).
 
 ### Install prefect-gitlab
