--- a/docs/integrations/prefect-kubernetes/index.mdx
+++ b/docs/integrations/prefect-kubernetes/index.mdx
@@ -4,7 +4,7 @@ title: prefect-kubernetes
 
 `prefect-kubernetes` contains Prefect tasks, flows, and blocks enabling orchestration, observation and management of Kubernetes resources.
 
-This library is most commonly used for installation with a Kubernetes worker. See the [Prefect docs on deploying with Kubernetes](3.0rc/deploy/infrastructure-examples/kubernetes) to learn how to create and run deployments in Kubernetes.
+This library is most commonly used for installation with a Kubernetes worker. See the [Prefect docs on deploying with Kubernetes](3.0/deploy/infrastructure-examples/kubernetes) to learn how to create and run deployments in Kubernetes.
 
 Prefect provides a Helm chart for deploying a worker, a self-hosted Prefect server instance, and other resources to a Kubernetes cluster. See the [Prefect Helm chart](https://github.com/PrefectHQ/prefect-helm) for more information.
 
@@ -12,7 +12,7 @@ Prefect provides a Helm chart for deploying a worker, a self-hosted Prefect serv
 
 ### Prerequisites
 
-- [Prefect installed](3.0rc/get-started/install) in a virtual environment.
+- [Prefect installed](3.0/get-started/install) in a virtual environment.
 - [Kubernetes installed](https://kubernetes.io/).
 
 ### Install `prefect-kubernetes`
