--- a/docs/integrations/prefect-snowflake/index.mdx
+++ b/docs/integrations/prefect-snowflake/index.mdx
@@ -11,7 +11,7 @@ The prefect-snowflake collection makes it easy to connect to a Snowflake databas
 
 ### Prerequisites
 
-- [Prefect installed](/3.0rc/get-started/install/).
+- [Prefect installed](/3.0/get-started/install/).
 
 ### Install prefect-snowflake
 
