--- a/docs/3.0/api-ref/rest-api/index.mdx
+++ b/docs/3.0/api-ref/rest-api/index.mdx
@@ -11,13 +11,13 @@ Prefect Cloud and self-hosted Prefect server each provide a REST API.
     - [Interactive Prefect Cloud REST API documentation](https://app.prefect.cloud/api/docs)
     - [Finding your Prefect Cloud details](#finding-your-prefect-cloud-details)
 - Self-hosted Prefect server:
-    - Interactive REST API documentation for self-hosted Prefect server is available under **Server API** on the sidebar navigation or at `http://localhost:4200/docs` or the `/docs` endpoint of the [PREFECT_API_URL](/3.0rc/manage/settings-and-profiles/) you have configured to access the server. You must have the server running with `prefect server start` to access the interactive documentation.
+    - Interactive REST API documentation for self-hosted Prefect server is available under **Server API** on the sidebar navigation or at `http://localhost:4200/docs` or the `/docs` endpoint of the [PREFECT_API_URL](/3.0/manage/settings-and-profiles/) you have configured to access the server. You must have the server running with `prefect server start` to access the interactive documentation.
     
 ## Interact with the REST API
 
 You can interact with the Prefect REST API in several ways:
 
-- Create an instance of [`PrefectClient`](https://prefect-python-sdk-docs.netlify.app/prefect/client/orchestration/#prefect.client.orchestration.PrefectClient), which is part of the [Prefect Python SDK](/3.0rc/api-ref/python/).
+- Create an instance of [`PrefectClient`](https://prefect-python-sdk-docs.netlify.app/prefect/client/orchestration/#prefect.client.orchestration.PrefectClient), which is part of the [Prefect Python SDK](/3.0/api-ref/python/).
 - Use your favorite Python HTTP library such as [Requests](https://requests.readthedocs.io/en/latest/) or [HTTPX](https://www.python-httpx.org/)
 - Use an HTTP library in your language of choice
 - Use [curl](https://curl.se/) from the command line 
@@ -108,7 +108,7 @@ Note that in this example `--data-raw "{}"` is required and is where you can spe
 
 ## Finding your Prefect Cloud details
 
-When working with the Prefect Cloud REST API you will need your Account ID and often the Workspace ID for the [workspace](/3.0rc/manage/cloud/workspaces/) you want to interact with. You can find both IDs for a [Prefect profile](/3.0rc/manage/settings-and-profiles/) in the CLI with `prefect profile inspect my_profile`. This command will also display your [Prefect API key](/3.0rc/manage/cloud/manage-users/api-keys/), as shown below:
+When working with the Prefect Cloud REST API you will need your Account ID and often the Workspace ID for the [workspace](/3.0/manage/cloud/workspaces/) you want to interact with. You can find both IDs for a [Prefect profile](/3.0/manage/settings-and-profiles/) in the CLI with `prefect profile inspect my_profile`. This command will also display your [Prefect API key](/3.0/manage/cloud/manage-users/api-keys/), as shown below:
 
 ```bash
 PREFECT_API_URL='https://api.prefect.cloud/api/accounts/abc-my-account-id-is-here/workspaces/123-my-workspace-id-is-here'
