--- a/docs/3.0/develop/inputs.mdx
+++ b/docs/3.0/develop/inputs.mdx
@@ -313,7 +313,7 @@ def get_shirt_order():
 
 This code causes the flow run to continually pause until the user enters a valid age.
 
-As an additional step, you can use an [automation](/3.0rc/automate/events/automations-triggers) to alert the user to the error.
+As an additional step, you can use an [automation](/3.0/automate/events/automations-triggers) to alert the user to the error.
 
 ## Send and receive input at runtime
 
@@ -483,7 +483,7 @@ async def sender():
 
 An iterator helps keep track of the inputs your flow has already received. If you want your flow to suspend and then resume later, 
 save the keys of the inputs you've seen so the flow can read them back out when it resumes. 
-Consider using a [block](/3.0rc/develop/blocks/), such as a `JSONBlock`.
+Consider using a [block](/3.0/develop/blocks/), such as a `JSONBlock`.
 
 The following flow receives input for 30 seconds then suspends itself, which exits the flow and tears down infrastructure:
 
