--- a/docs/3.0/develop/write-flows.mdx
+++ b/docs/3.0/develop/write-flows.mdx
@@ -25,12 +25,12 @@ if __name__ == "__main__":
 When a function becomes a flow, it gains the following capabilities:
 
 - Metadata about [flow runs](#flow-runs), such as run time and final state, is automatically tracked.
-- Each [state](/3.0rc/develop/manage-states/) the flow enters is recorded. This
-allows you to observe and [act upon each transition](/3.0rc/develop/manage-states#execute-code-on-state-changes) in the flow's execution.
+- Each [state](/3.0/develop/manage-states/) the flow enters is recorded. This
+allows you to observe and [act upon each transition](/3.0/develop/manage-states#execute-code-on-state-changes) in the flow's execution.
 - Input arguments can be type validated as workflow [parameters](/#specify-flow-parameters).
 - [Retries](#retries) can be performed on failure, with configurable delay and retry limits.
 - Timeouts can be enforced to prevent unintentional, long-running workflows.
-- A flow can be [deployed](/3.0rc/deploy/infrastructure-examples/docker/), which exposes an API for interacting with it remotely.
+- A flow can be [deployed](/3.0/deploy/infrastructure-examples/docker/), which exposes an API for interacting with it remotely.
 
 Flows are uniquely identified by name. 
 You can provide a `name` parameter value for the flow:
@@ -52,11 +52,11 @@ Create a flow run by calling a flow by its function name, just as you would a no
 You can also create a flow run by:
 
 - Using external schedulers such as `cron` to invoke a flow function
-- Triggering a [deployment](/3.0rc/deploy/infrastructure-examples/docker/) of that flow in Prefect Cloud or self-hosted Prefect server
+- Triggering a [deployment](/3.0/deploy/infrastructure-examples/docker/) of that flow in Prefect Cloud or self-hosted Prefect server
 - Starting a flow run for the deployment through a schedule, the Prefect UI, or the Prefect API
 
 However you run your flow, Prefect monitors the flow run, capturing its state for observability.
-You can log a [variety of metadata](/3.0rc/develop/logging) about flow runs for monitoring, troubleshooting, and auditing purposes.
+You can log a [variety of metadata](/3.0/develop/logging) about flow runs for monitoring, troubleshooting, and auditing purposes.
 
 The example below uses the HTTPX client library to fetch statistics about the [main Prefect repository](https://github.com/PrefectHQ/prefect).
 
@@ -93,7 +93,7 @@ Forks 🍴 : 1245
 ## Specify flow parameters
 
 As with any Python function, you can pass arguments to a flow, including both positional and keyword arguments.
-These arguments defined on your flow function are called [parameters](/3.0rc/develop/write-flows/#parameters).
+These arguments defined on your flow function are called [parameters](/3.0/develop/write-flows/#parameters).
 They are stored by the Prefect orchestration engine on the flow run object.
 
 Prefect automatically performs type conversion of inputs using any provided type hints.
@@ -156,7 +156,7 @@ Flow run received invalid parameters:
  - model.a: Input should be a valid integer, unable to parse string as an integer
 ```
 
-Note that you can provide parameter values to a flow through the API using a [deployment](/3.0rc/deploy/).
+Note that you can provide parameter values to a flow through the API using a [deployment](/3.0/deploy/).
 Flow run parameters sent to the API are coerced to the appropriate types when possible.
 
 <Warning>
@@ -175,7 +175,7 @@ Flow run parameters cannot exceed `512kb` in size.
 
 ## Compose flows
 
-Flows can call [tasks](/3.0rc/develop/write-tasks), the most granular units of orchestrated work in Prefect workflows:
+Flows can call [tasks](/3.0/develop/write-tasks), the most granular units of orchestrated work in Prefect workflows:
 
 ```python
 from prefect import flow, task
@@ -210,7 +210,7 @@ There is a full representation of the nested flow run in the backend as if it ha
 Nested flow runs differ from normal flow runs in that they resolve any passed task futures into data.
 This allows data to be passed from the parent flow run to a nested flow run easily.
 
-When a nested flow run starts, it creates a new [task runner](/3.0rc/develop/task-runners/) for any tasks it contains.
+When a nested flow run starts, it creates a new [task runner](/3.0/develop/task-runners/) for any tasks it contains.
 When the nested flow run completes, the task runner shuts down. 
 Nested flow runs block execution of the parent flow run until completion.
 However, asynchronous nested flows can run concurrently with [AnyIO task groups](https://anyio.readthedocs.io/en/stable/tasks.html) or [asyncio.gather](https://docs.python.org/3/library/asyncio-task.html#id6).
@@ -220,7 +220,7 @@ The `state_details` field of the task run representing the child flow run includ
 The `state_details` field of the nested flow run includes a `parent_task_run_id`.
 
 You can define multiple flows within the same file.
-Whether running locally or through a [deployment](/3.0rc/deploy/infrastructure-examples/docker/), you must indicate which flow is the entrypoint for a flow run.
+Whether running locally or through a [deployment](/3.0/deploy/infrastructure-examples/docker/), you must indicate which flow is the entrypoint for a flow run.
 
 <Warning>
 **Cancel nested flow runs**
@@ -446,7 +446,7 @@ list(generator) # prints 'Generator consumed!'
 A _flow run_ is a single execution of a flow.
 
 You can create a flow run by calling the flow function manually, or even by using an external scheduler such as `cron` to invoke a flow function. 
-Most users run flows by creating a [deployment](/3.0rc/deploy/) on Prefect Cloud or Prefect server and then scheduling a flow run for the deployment through a schedule, the Prefect UI, or the Prefect API.
+Most users run flows by creating a [deployment](/3.0/deploy/) on Prefect Cloud or Prefect server and then scheduling a flow run for the deployment through a schedule, the Prefect UI, or the Prefect API.
 
 However you run a flow, the Prefect API monitors the flow run and records information for monitoring, troubleshooting, and auditing.
 
@@ -461,7 +461,7 @@ All flows can be configured by passing arguments to the decorator. Flows accept 
 | `retries`                                          | An optional number of times to retry on flow run failure.                                                                                                                                                            |
 | <span class="no-wrap">`retry_delay_seconds`</span> | An optional number of seconds to wait before retrying the flow after failure. This is only applicable if `retries` is nonzero.                                                                                       |
 | `flow_run_name`                                    | An optional name to distinguish runs of this flow; this name can be provided as a string template with the flow's parameters as variables; you can also provide this name as a function that returns a string.       |
-| `task_runner`                                      | An optional [task runner](/3.0rc/develop/task-runners/) to use for task execution within the flow when you `.submit()` tasks. If not provided and you `.submit()` tasks, the `ThreadPoolTaskRunner` is used.         |
+| `task_runner`                                      | An optional [task runner](/3.0/develop/task-runners/) to use for task execution within the flow when you `.submit()` tasks. If not provided and you `.submit()` tasks, the `ThreadPoolTaskRunner` is used.         |
 | `timeout_seconds`                                  | An optional number of seconds indicating a maximum runtime for the flow. If the flow exceeds this runtime, it is marked as failed. Flow execution may continue until the next task is called.                   |
 | `validate_parameters`                              | Boolean indicating whether parameters passed to flows are validated by Pydantic. Default is `True`.                                                                                                                  |
 | `version`                                          | An optional version string for the flow. If not provided, we will attempt to create a version string as a hash of the file containing the wrapped function. If the file cannot be located, the version will be null. |
@@ -560,7 +560,7 @@ If set to `False`, no validation is performed on flow parameters.
 ## Final state determination
 
 A state is a record of the status of a particular task run or flow run. 
-See the [manage states](/3.0rc/develop/manage-states) page for more information.
+See the [manage states](/3.0/develop/manage-states) page for more information.
 
 import FinalFlowState from '/snippets/final-flow-state.mdx'
 
@@ -748,9 +748,9 @@ If the flow run fails on the final retry, Prefect records the final flow run sta
 
 Optionally, pass an integer to `retry_delay_seconds` to specify how many seconds to wait between each retry attempt. 
 
-Check out [Transactions](/3.0rc/develop/transactions/) to make your flows even more resilient and rollback actions when desired.
+Check out [Transactions](/3.0/develop/transactions/) to make your flows even more resilient and rollback actions when desired.
 
 ## See also
 
-- Store and reuse non-sensitive bits of data, such as configuration information, by using [variables](/3.0rc/develop/variables).
-- Make your flow more manageable, performant, and observable by breaking it into discrete units of orchestrated work with [tasks](/3.0rc/develop/write-tasks/).
+- Store and reuse non-sensitive bits of data, such as configuration information, by using [variables](/3.0/develop/variables).
+- Make your flow more manageable, performant, and observable by breaking it into discrete units of orchestrated work with [tasks](/3.0/develop/write-tasks/).
