--- a/docs/3.0/get-started/quickstart.mdx
+++ b/docs/3.0/get-started/quickstart.mdx
@@ -28,7 +28,7 @@ if __name__ == "__main__":
 <Installation />
 
 <Tip>
-See [Install Prefect](/3.0rc/get-started/install/) for more details on installation.
+See [Install Prefect](/3.0/get-started/install/) for more details on installation.
 </Tip>
 
 ## Connect to a Prefect API
@@ -57,16 +57,16 @@ Connect to a Prefect API:
 
 Your CLI is now authenticated with your Prefect Cloud account through a locally stored API key that expires in 30 days.
 
-If you have any issues with browser-based authentication, you can [authenticate with a manually created API key](/3.0rc/manage/cloud/manage-users/api-keys/) instead.
+If you have any issues with browser-based authentication, you can [authenticate with a manually created API key](/3.0/manage/cloud/manage-users/api-keys/) instead.
   </Tab>
 </Tabs>
 
 ## Convert your script to a Prefect workflow
 
 The easiest way to convert a Python script into a workflow is to add a `@flow` decorator to the script's entrypoint.
-This will create a corresponding [flow](/3.0rc/develop/write-flows/). 
+This will create a corresponding [flow](/3.0/develop/write-flows/). 
 
-Adding `@task` decorators to any functions called by the flow converts them to [tasks](/3.0rc/develop/write-tasks/). 
+Adding `@task` decorators to any functions called by the flow converts them to [tasks](/3.0/develop/write-tasks/). 
 Tasks receive metadata about upstream dependencies and the state of those dependencies before they run.
 Prefect will then record these dependencies and states as it orchestrates these tasks.
 
@@ -125,7 +125,7 @@ Prefect automatically tracks the state of the flow run and logs the output, whic
 ## Create a work pool
 
 Running a flow locally is a good start, but most use cases require a remote execution environment.
-A [work pool](/3.0rc/deploy/infrastructure-concepts/work-pools/) is the most common interface for deploying flows to remote infrastructure.
+A [work pool](/3.0/deploy/infrastructure-concepts/work-pools/) is the most common interface for deploying flows to remote infrastructure.
 
 <Tabs>
   <Tab title="Self-hosted">
@@ -155,7 +155,7 @@ All flow runs submitted to this work pool will run in a local subprocess (the me
   <Tab title="Prefect Cloud">
 Deploy your flow to Prefect Cloud using a managed work pool.
 
-1. Create a [managed work pool](/3.0rc/deploy/infrastructure-concepts/work-pools):
+1. Create a [managed work pool](/3.0/deploy/infrastructure-concepts/work-pools):
 
    ```bash
    prefect work-pool create my-work-pool --type prefect:managed
@@ -171,7 +171,7 @@ You can also choose from other [work pool types](https://docs.prefect.io/concept
 
 ## Deploy and schedule your flow
 
-A [deployment](/3.0rc/deploy/infrastructure-examples/docker/) is used to determine when, where, and how a flow should run.
+A [deployment](/3.0/deploy/infrastructure-examples/docker/) is used to determine when, where, and how a flow should run.
 Deployments elevate flows to remotely configurable entities that have their own API.
 
 1. Create a deployment in code:
@@ -195,7 +195,7 @@ Deployments elevate flows to remotely configurable entities that have their own 
 
    <Tip>
    You can store your flow code in nearly any location as long as Prefect can access it.
-   See [Where to store your flow code](/3.0rc/deploy/infrastructure-concepts/store-flow-code) for more details.
+   See [Where to store your flow code](/3.0/deploy/infrastructure-concepts/store-flow-code) for more details.
    </Tip>
 
 1. Run the script to create the deployment:
@@ -225,17 +225,17 @@ Deployments elevate flows to remotely configurable entities that have their own 
 
    Soon you should see the flow run graph and logs on the Flow Run page in the UI.
 
-   ![Flow run graph and logs](/3.0rc/img/ui/qs-flow-run.png)
+   ![Flow run graph and logs](/3.0/img/ui/qs-flow-run.png)
 
 ## Next steps
 
 You've seen how to move from a Python script to a scheduled, observable, remotely orchestrated workflow with Prefect.
 Now consider reading: 
 
-* [Write flows](/3.0rc/develop/write-flows)
-* [Write tasks](/3.0rc/develop/write-tasks)
-* [Cloud and server](/3.0rc/manage)
-* [Manage infrastructure with work pools](/3.0rc/deploy/infrastructure-concepts/work-pools) to learn about running workflows on Kubernetes, Docker, and serverless infrastructure.
+* [Write flows](/3.0/develop/write-flows)
+* [Write tasks](/3.0/develop/write-tasks)
+* [Cloud and server](/3.0/manage)
+* [Manage infrastructure with work pools](/3.0/deploy/infrastructure-concepts/work-pools) to learn about running workflows on Kubernetes, Docker, and serverless infrastructure.
 
 <Tip>
 Need help? [Book a meeting](https://calendly.com/prefect-experts/prefect-product-advocates?utm_campaign=prefect_docs_cloud&utm_content=prefect_docs&utm_medium=docs&utm_source=docs) with a Prefect Product Advocate to get your questions answered.
