--- a/docs/3.0/manage/cloud/connect-to-cloud.mdx
+++ b/docs/3.0/manage/cloud/connect-to-cloud.mdx
@@ -19,7 +19,7 @@ You will log in a to Prefect Cloud account from the local environment where you 
 ### Steps 
 
 1. Open a new terminal session.
-2. [Install Prefect](/3.0rc/get-started/install/) in the environment where you want to execute flow runs.
+2. [Install Prefect](/3.0/get-started/install/) in the environment where you want to execute flow runs.
 
 ```bash
 pip install -U prefect
@@ -48,7 +48,7 @@ Paste your authentication key:
 Authenticated with Prefect Cloud! Using workspace 'prefect/terry-prefect-workspace'.
 ```
 
-You can authenticate by manually pasting an [API key](/3.0rc/manage/cloud/manage-users/api-keys/) or through a browser-based approval that auto-generates an API key with a 30-day expiration.
+You can authenticate by manually pasting an [API key](/3.0/manage/cloud/manage-users/api-keys/) or through a browser-based approval that auto-generates an API key with a 30-day expiration.
 
 ### Change workspaces
 
@@ -88,13 +88,13 @@ This example configures `PREFECT_API_URL` and `PREFECT_API_KEY` in the default p
 You can use `prefect profile` CLI commands to create settings profiles for different configurations. 
 For example, you can configure a "cloud" profile to use the Prefect Cloud API URL and API key; 
 and another "local" profile for local development using a local Prefect API server started with `prefect server start`. 
-See [Settings](/3.0rc/manage/settings-and-profiles/) for details.
+See [Settings](/3.0/manage/settings-and-profiles/) for details.
 
 <Note>
 **Environment variables**
 
 You can set `PREFECT_API_URL` and `PREFECT_API_KEY` just like any other environment variable. 
-See [Overriding defaults with environment variables](/3.0rc/manage/settings-and-profiles/) 
+See [Overriding defaults with environment variables](/3.0/manage/settings-and-profiles/) 
 for more information.
 </Note>
 
