--- a/docs/3.0/manage/cloud/troubleshoot-cloud.mdx
+++ b/docs/3.0/manage/cloud/troubleshoot-cloud.mdx
@@ -134,7 +134,7 @@ They should be upgraded simultaneously with the core library, using the same met
 
 ## Logs
 
-In many cases, there is an informative stack trace in Prefect's [logs](/3.0rc/develop/logging/). 
+In many cases, there is an informative stack trace in Prefect's [logs](/3.0/develop/logging/). 
 **Read it carefully**, locate the source of the error, and try to identify the cause.
 
 There are two types of logs:
@@ -174,13 +174,13 @@ curl -s -H "Authorization: Bearer $PREFECT_API_KEY" "https://api.prefect.cloud/a
 <Note>
 **Users vs Service Accounts**
 
-[Service accounts](/3.0rc/manage/cloud/manage-users/service-accounts/) (sometimes referred to as bots),  
+[Service accounts](/3.0/manage/cloud/manage-users/service-accounts/) (sometimes referred to as bots),  
 represent non-human actors that interact with Prefect such as workers and CI/CD systems. 
 Each human that interacts with Prefect should be represented as a user. 
 User API keys start with `pnu_` and service account API keys start with `pnb_`.
 </Note>
 
-Actors can be members of [workspaces](/3.0rc/manage/cloud/workspaces/). An actor attempting an action in a 
+Actors can be members of [workspaces](/3.0/manage/cloud/workspaces/). An actor attempting an action in a 
 workspace they are not a member of results in a 404 response. Use the following command to check your actor's workspace memberships:
 
 ```bash
@@ -195,14 +195,14 @@ Append the following to the end of the command above to make the output more rea
 </Note>
 
 Make sure your actor is a member of the workspace you are working in. Within a workspace, 
-an actor has a [role](/3.0rc/manage/cloud/manage-users/manage-roles/) which grants them certain permissions. 
+an actor has a [role](/3.0/manage/cloud/manage-users/manage-roles/) which grants them certain permissions. 
 Insufficient permissions result in an error. For example, starting a worker with the **Viewer** role results in errors.
 
 ## Execution
 
 The user can execute flows locally, or remotely by a worker. Local execution generally means that you, the user, 
 run your flow directly with a command like `python flow.py`. Remote execution generally means that a worker runs your flow 
-through a [deployment](/3.0rc/deploy/infrastructure-examples/docker/) (optionally on different infrastructure).
+through a [deployment](/3.0/deploy/infrastructure-examples/docker/) (optionally on different infrastructure).
 
 With remote execution, the creation of your flow run happens separately from its execution. 
 Flow runs are assigned to a work pool and a work queue. For flow runs to execute, a worker must be subscribed 
