--- a/docs/3.0/resources/cancel.mdx
+++ b/docs/3.0/resources/cancel.mdx
@@ -28,7 +28,7 @@ A monitoring process must be running to enforce the cancellation.
 
 Inline nested flow runs (those created without `run_deployment`), cannot be cancelled without cancelling the parent flow run.
 To cancel a nested flow run independent of its parent flow run, we recommend deploying it separately 
-and starting it using the [run_deployment](/3.0rc/deploy/index) 
+and starting it using the [run_deployment](/3.0/deploy/index) 
 function.
 </Warning>
 
@@ -80,7 +80,7 @@ prefect flow-run cancel 'a55a4804-9e3c-4042-8b59-b3b6b7618736'
 
 Navigate to the flow run's detail page and click `Cancel` in the upper right corner.
 
-![Prefect UI](/3.0rc/img/ui/flow-run-cancellation-ui.png)
+![Prefect UI](/3.0/img/ui/flow-run-cancellation-ui.png)
 
 ## Timeouts
 
