--- a/docs/3.0/resources/cli-shell.mdx
+++ b/docs/3.0/resources/cli-shell.mdx
@@ -12,10 +12,10 @@ and schedule shell commands as Prefect flows, including how to:
 ## Prerequisites
 Before you begin, ensure you have:
 
-- A basic understanding of Prefect flows. Start with the [Getting started](/3.0rc/get-started/quickstart/) 
+- A basic understanding of Prefect flows. Start with the [Getting started](/3.0/get-started/quickstart/) 
 guide if necessary.
 - A recent version of Prefect installed in your command line environment. 
-Follow these [instructions](/3.0rc/get-started/install/) if you have any issues.
+Follow these [instructions](/3.0/get-started/install/) if you have any issues.
 
 ## The `watch` command
 The `watch` command wraps any shell command in a Prefect flow for instant execution. 
@@ -40,7 +40,7 @@ shell tasks.
 
 ## Deploy with `serve`
 To run shell commands on a schedule, the `serve` command creates a Prefect 
-[deployment](/3.0rc/deploy/infrastructure-examples/docker/) for regular execution. 
+[deployment](/3.0/deploy/infrastructure-examples/docker/) for regular execution. 
 This is a quick way to create a deployment served by Prefect.
 
 ### Example usage
@@ -62,5 +62,5 @@ ensuring critical updates are generated and available on time.
 - **Centralized workflow management:** Manage and monitor your scheduled shell commands 
 inside Prefect for a unified workflow overview.
 - **Configurable execution:** Customize execution frequency, 
-[concurrency limits](/3.0rc/develop/global-concurrency-limits/), 
+[concurrency limits](/3.0/develop/global-concurrency-limits/), 
 and other parameters to suit your project's needs and resources.
