--- a/docs/3.0/resources/secrets.mdx
+++ b/docs/3.0/resources/secrets.mdx
@@ -15,7 +15,7 @@ credentials.
 
 ## Prerequisites
 
-1. Prefect [installed](/3.0rc/get-started/install)
+1. Prefect [installed](/3.0/get-started/install)
 1. CLI authenticated to your [Prefect Cloud](https://app.prefect.cloud) account
 1. [Snowflake account](https://www.snowflake.com/)
 1. [AWS account](https://aws.amazon.com/)
@@ -178,7 +178,7 @@ See [`prefect-snowflake`](/integrations/prefect-snowflake) for more examples of 
 
 ## Next steps
 
-Now you can turn your flow into a [deployment](/3.0rc/deploy/infrastructure-examples/docker/) so you and your team 
+Now you can turn your flow into a [deployment](/3.0/deploy/infrastructure-examples/docker/) so you and your team 
 can run it remotely on a schedule, in response to an event, or manually.  
 
 Make sure to specify the `prefect-aws` and `prefect-snowflake` dependencies in your work pool or deployment 
