--- a/docs/integrations/prefect-azure/index.mdx
+++ b/docs/integrations/prefect-azure/index.mdx
@@ -9,7 +9,7 @@ For example, you can retrieve secrets, read and write Blob Storage objects, and 
 
 ### Prerequisites
 
-- [Prefect installed](3.0rc/get-started/install) in a virtual environment.
+- [Prefect installed](3.0/get-started/install) in a virtual environment.
 - An [Azure account](https://azure.microsoft.com/) and the necessary permissions to access desired services.
 
 ### Install prefect-azure
@@ -102,7 +102,7 @@ Run flows on [Azure Container Instances (ACI)](https://learn.microsoft.com/en-us
 
 See the [Azure Container Instances Worker Guide](/integrations/prefect-azure/aci_worker/) for a walkthrough of using ACI in a hybrid work pool.
 
-If you're using Prefect Cloud, [ACI push work pools](/3.0rc/deploy/infrastructure-examples/serverless/#__tabbed_1_2) provide all the benefits of ACI with a quick setup and no worker needed.
+If you're using Prefect Cloud, [ACI push work pools](/3.0/deploy/infrastructure-examples/serverless/#__tabbed_1_2) provide all the benefits of ACI with a quick setup and no worker needed.
 
 ## Resources
 
