--- a/docs/integrations/prefect-bitbucket/index.mdx
+++ b/docs/integrations/prefect-bitbucket/index.mdx
@@ -8,7 +8,7 @@ The prefect-bitbucket library makes it easy to interact with Bitbucket repositor
 
 ### Prerequisites
 
-- [Prefect installed](/3.0rc/get-started/install/).
+- [Prefect installed](/3.0/get-started/install/).
 - A [Bitbucket account](https://bitbucket.org/product).
 
 ### Install prefect-bitbucket
@@ -52,7 +52,7 @@ To create a deployment and run a deployment where the flow code is stored in a p
 A deployment can use flow code stored in a Bitbucket repository without using this library in either of the following cases:
 
 - The repository is public
-- The deployment uses a [Secret block](/3.0rc/resources/secrets) to store the token
+- The deployment uses a [Secret block](/3.0/resources/secrets) to store the token
 
 Create a Bitbucket Credentials block:
 
