--- a/docs/integrations/prefect-sqlalchemy/index.mdx
+++ b/docs/integrations/prefect-sqlalchemy/index.mdx
@@ -6,7 +6,7 @@ The prefect-sqlalchemy helps you connect to a database in your Prefect flows.
 
 ### Prerequisites
 
-- [Prefect installed](/3.0rc/get-started/install/).
+- [Prefect installed](/3.0/get-started/install/).
 
 ### Install `prefect-sqlalchemy`
 
